[gd_scene load_steps=17 format=2]

[ext_resource path="res://gui_3d.gd" type="Script" id=1]
[ext_resource path="res://crt_shader.shader" type="Shader" id=2]
[ext_resource path="res://beep-sound-8333.wav" type="AudioStream" id=3]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://pexels-elīna-arāja-3407118.jpg" type="Texture" id=5]
[ext_resource path="res://symbols.png" type="Texture" id=6]
[ext_resource path="res://tv-glitch-6245.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 2 )
shader_param/crt_curve = 0.0
shader_param/crt_scan_line_color = 0.347
shader_param/aperture_grille_rate = 0.4
shader_param/rf_switch_esque_blur = 0.0
shader_param/white_noise_rate = 0.0

[sub_resource type="Animation" id=10]
resource_name = "creepy"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Pexels-elīna-arāja-3407118:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, false, true, false, true, false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Symbols:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, true, false, true, false, true, false, true, false, true, false, true, true, false, true, false, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("glitch:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="QuadMesh" id=5]
size = Vector2( 3, 2 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
albedo_texture = SubResource( 2 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.5, 1, 0.05 )

[sub_resource type="Animation" id=8]
resource_name = "no"
length = 1.15
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/GUI/Panel/no_button:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_question"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Viewport/GUI/Panel/ColorRect2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "yes"
length = 1.15
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/GUI/Panel/yes_button:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_question"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Viewport/GUI/Panel/ColorRect2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="GUIPanel3D" type="Spatial"]
visible = false
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 280, 180 )
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="GUI" type="Control" parent="Viewport"]
margin_right = 280.0
margin_bottom = 180.0
mouse_filter = 1

[node name="Panel" type="Panel" parent="Viewport/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Viewport/GUI/Panel"]
margin_right = 280.0
margin_bottom = 180.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )

[node name="yes_button" type="Button" parent="Viewport/GUI/Panel"]
visible = false
margin_left = 75.0
margin_top = 90.0
margin_right = 215.0
margin_bottom = 118.0
text = "YES"

[node name="no_button" type="Button" parent="Viewport/GUI/Panel"]
visible = false
margin_left = 75.0
margin_top = 125.0
margin_right = 215.0
margin_bottom = 153.0
text = "NO"

[node name="Label" type="Label" parent="Viewport/GUI/Panel"]
margin_left = 50.0
margin_top = 15.0
margin_right = 250.0
margin_bottom = 55.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = SubResource( 9 )
text = "ARE YOU ALONE?"
valign = 1
autowrap = true

[node name="Panel" type="Panel" parent="Viewport/GUI/Panel"]
visible = false
material = SubResource( 6 )
margin_right = 280.0
margin_bottom = 180.0

[node name="Pexels-elīna-arāja-3407118" type="Sprite" parent="Viewport/GUI/Panel"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Symbols" type="Sprite" parent="Viewport/GUI/Panel"]
visible = false
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Viewport/GUI/Panel"]
anims/creepy = SubResource( 10 )

[node name="glitch" type="AudioStreamPlayer" parent="Viewport/GUI/Panel"]
stream = ExtResource( 7 )

[node name="ColorRect2" type="ColorRect" parent="Viewport/GUI/Panel"]
visible = false
margin_right = 280.0
margin_bottom = 280.0
color = Color( 0, 0, 0, 1 )

[node name="Quad" type="MeshInstance" parent="."]
mesh = SubResource( 5 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="Quad"]
collision_layer = 2
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="Quad/Area"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LookAround" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="blink" type="AnimationPlayer" parent="."]
anims/no = SubResource( 8 )
anims/yes = SubResource( 7 )

[connection signal="pressed" from="Viewport/GUI/Panel/yes_button" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Viewport/GUI/Panel/no_button" to="." method="_on_no_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LookAround" to="." method="_on_LookAround_timeout"]
